Ensure that featured-article teaser is not shown on mobile if empty.

--- a/assets/src/blocks/article-teasers/block.scss
+++ b/assets/src/blocks/article-teasers/block.scss
@@ -132,6 +132,12 @@
 .featured-article-teaser {
 	position: relative;
 
+	&.featured-article-not-set {
+		@media screen and (max-width: 700px) {
+			display: none;
+		}
+	}
+
 	.featured-tag {
 		left: 16px;
 		top: 16px;
